applications/unifi/unifi-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-admin
  namespace: home
  labels:
    app: unifi
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8080
    - name: https
      port: 8443
  selector:
    app: unifi
  sessionAffinity: None
