applications/unifi/unifi-admin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: unifi-external-ingress
  namespace: home
  labels:
    app: unifi
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
  - hosts:
    - unifi.jamesveitch.dev
    secretName: unifi-certs
  rules:
  - host: unifi.jamesveitch.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: unifi-admin
          servicePort: https
